# rag-projects

./: .gitignore  AgenticRAG.ipynb  Flow.drawio  README.md  docker-compose-gpu.yml  docker-compose.yml  pyproject.toml
milvus_tutorials/: 1-build-rag-with-milvus.ipynb  Readme.md
milvus_tutorials/apps/: Readme.md
milvus_tutorials/apps/rag_search_with_milvus/: Readme.md  all_llm.py  app.py  encoder.py  insert.py  milvus_utils.py
milvus_tutorials/filtered_search/: Filtered_search_with_Milvus_and_OpenAI.ipynb  Readme.md
milvus_tutorials/use_ColPali_with_milvus/: Readme.md  main.py
simple_rag/: Readme.md  app.py  example.env  flow.py  main.py  requirements.txt  scenario1_cam4_short.txt  test.py
uncategorized/multimodal-rag-for-advanced-video-processing-with-llamaindex-lancedb/: Readme.md
uncategorized/vector-visualization/: Readme.md  vector_visualization.py
